# HitmanRL

./: .clang-format  CMakeLists.txt
res/names/: fem_f_f  fem_f_n  last_f  last_n  male_f_f  male_f_n
src/: Action.cpp  Action.h  Actor.cpp  Actor.hpp  Body.cpp  Body.hpp  Console.cpp  Console.hpp  Entity.cpp  Entity.hpp  Game.cpp  Game.hpp  InventoryMenu.cpp  InventoryMenu.hpp  Item.cpp  Item.h  ItemHandler.cpp  ItemHandler.h  LightMap.cpp  LightMap.h  Menu.cpp  Menu.h  MusicPlayer.cpp  MusicPlayer.hpp  Names.cpp  Names.hpp  Npc.cpp  Npc.hpp  NpcHandler.cpp  NpcHandler.h  Player.cpp  Player.hpp  ResourceHandler.h  ResourceHandler.inl  ResourceIdentifier.hpp  SoundPlayer.cpp  SoundPlayer.hpp  State.cpp  State.hpp  StateStack.cpp  (+14 more)
